refactor: resolve SonarLint issue